# Open_RMF_Project

./: sim_command.txt
starbots_fleet_adapters/: package.xml  setup.cfg  setup.py
starbots_fleet_adapters/config/: barista_starbots_config.yaml  turtleE_starbots_config.yaml
starbots_fleet_adapters/launch/: start_barista_adapter_starbots.launch.xml  start_turtleE_adapter_starbots.launch.xml
starbots_fleet_adapters/starbots_fleet_adapters/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py  robot_api_server_barista.py  robot_api_server_turtleE.py
starbots_rmf/: CMakeLists.txt  package.xml
starbots_rmf/dashboard_config/starbots_prod/: dashboard_config.json  main.json
starbots_rmf/launch/: common.launch.xml  rmf_only_common.launch.xml  visualization.launch.xml
starbots_rmf/rmf_config/: starbots_prod.building.yaml
starbots_rmf/rviz_config/: starbots_prod.rviz
starbots_workcell/: CMakeLists.txt  package.xml
starbots_workcell/launch/: start_all_manual_system.launch.xml  start_arm_dispenser_manual_ingestor.launch.xml  start_dispenser_manual_system.launch.xml  start_gui.launch.xml  start_manual_dispenser.launch.xml  start_manual_ingestor.launch.xml
starbots_workcell/scripts/: manual_dispenser_v2.py  manual_ingestor_v2.py  robot_arm_panda_dispenser.py  ros2_human_interface.py
